[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/EventManager.gd" type="Script" id=2]
[ext_resource path="res://scenes/Blobs.gd" type="Script" id=3]
[ext_resource path="res://sounds/tracks/ambient_loop.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/fx/splat1.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/fx/vomit3.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=10]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.25
dof_blur_far_enabled = true
dof_blur_near_enabled = true

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 8 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Blobs" type="MultiMeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0 )
script = ExtResource( 3 )

[node name="fx_vomit3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="fx_splat1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="EventManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="GUI" parent="." instance=ExtResource( 7 )]

[connection signal="vomit" from="EventManager" to="." method="_on_EventManager_vomit"]
